--- a/VPL/VPL4/sol.ipynb
+++ b/VPL/VPL4/sol.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 23,
       "metadata": {
         "id": "VF6HWP1vQmHl"
       },
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -219,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 25,
       "metadata": {
         "id": "yv4wKf8XKkqc"
       },
@@ -242,7 +242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -335,7 +335,7 @@
               "4             64.864861  "
             ]
           },
-          "execution_count": 7,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -346,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -447,7 +447,7 @@
               "max           713.629028         100.000000            100.000000"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 27,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -480,7 +480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 28,
       "metadata": {
         "id": "7nAXnIpk6tPr"
       },
@@ -510,7 +510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 29,
       "metadata": {
         "id": "Eynd-EnyNkuq"
       },
@@ -534,7 +534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 30,
       "metadata": {
         "id": "fB3QNl7iRRX2"
       },
@@ -573,7 +573,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 31,
       "metadata": {
         "id": "6bGem0S0zOb2"
       },
@@ -586,7 +586,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 32,
       "metadata": {
         "id": "QWq52qQp2u3A"
       },
@@ -642,7 +642,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 33,
       "metadata": {
         "id": "HusB0hXVAXHD"
       },
@@ -698,7 +698,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -785,7 +785,7 @@
               "Privada                                      566  "
             ]
           },
-          "execution_count": 15,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -812,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 35,
       "metadata": {
         "id": "VKRjH8ZxpPdv"
       },
@@ -837,7 +837,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -855,7 +855,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 37,
       "metadata": {
         "id": "eHLyqTxd0u6g"
       },
@@ -865,11 +865,11 @@
         "    col = 'NOTA_MEDIA_ESCOLA'\n",
         "     \n",
         "    values = np.zeros(n_sub)\n",
-        "    notas = data.loc[data['DEPENDENCIA_ADMINISTRATIVA'] == 'Federal']\n",
-        "    size = len(notas)\n",
+        "    federal = data[data['DEPENDENCIA_ADMINISTRATIVA']=='Federal']\n",
+        "    size = len(federal)\n",
         "    \n",
         "    for i in range(n_sub):\n",
-        "        sample = notas.sample(n=size, replace=True)\n",
+        "        sample = federal.sample(n=size, replace=True)\n",
         "\n",
         "        # Lembre que podemos utilizar mediana, média ou qualquer outra estatística agregada\n",
         "        # values[i] = sample[col].median()\n",
@@ -879,11 +879,14 @@
         "    # LI = values.mean() - ss.norm.ppf(alpha+(1-alpha)/2).round(2) * (values.std(ddof=1) / np.sqrt(size))\n",
         "    # LS = values.mean() + ss.norm.ppf(alpha+(1-alpha)/2).round(2) * (values.std(ddof=1) / np.sqrt(size))\n",
         "\n",
-        "    values = pd.Series(values)\n",
+        "    # values = pd.Series(values)\n",
         "\n",
         "    # Compute confidence interval\n",
-        "    LI = values.quantile((1 - alpha) / 2)\n",
-        "    LS = values.quantile((1 - alpha) / 2 + alpha)\n",
+        "    # LI = values.quantile((1 - alpha) / 2)\n",
+        "    # LS = values.quantile((1 - alpha) / 2 + alpha)\n",
+        "\n",
+        "    LI = np.percentile(values, ((1 - alpha) / 2 ) * 100 )\n",
+        "    LS = np.percentile(values, ((1 - alpha) / 2 + alpha) * 100)\n",
         "\n",
         "    # LI = np.percentile(values, (1 - alpha) / 2)\n",
         "    # LS = np.percentile(values, (1 - alpha) / 2 + alpha)\n",
@@ -893,7 +896,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 38,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
