--- a/VPL/VPL4/sol.ipynb
+++ b/VPL/VPL4/sol.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 1,
       "metadata": {
         "id": "VF6HWP1vQmHl"
       },
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -219,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 3,
       "metadata": {
         "id": "yv4wKf8XKkqc"
       },
@@ -242,7 +242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -335,7 +335,7 @@
               "4             64.864861  "
             ]
           },
-          "execution_count": 26,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -346,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -447,7 +447,7 @@
               "max           713.629028         100.000000            100.000000"
             ]
           },
-          "execution_count": 27,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -480,7 +480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 17,
       "metadata": {
         "id": "7nAXnIpk6tPr"
       },
@@ -491,8 +491,8 @@
         "    alpha = 0.99\n",
         "    N = notas_escolas.shape[0]\n",
         "\n",
-        "    LI = notas_escolas.mean() - ss.norm.ppf(alpha+(1-alpha)/2).round(2) * (notas_escolas.std(ddof=1) / np.sqrt(N))\n",
-        "    LS = notas_escolas.mean() + ss.norm.ppf(alpha+(1-alpha)/2).round(2) * (notas_escolas.std(ddof=1) / np.sqrt(N))\n",
+        "    LI = notas_escolas.mean() - ss.norm.ppf(alpha+(1-alpha)/2).round(2) * (notas_escolas.std() / np.sqrt(N))\n",
+        "    LS = notas_escolas.mean() + ss.norm.ppf(alpha+(1-alpha)/2).round(2) * (notas_escolas.std() / np.sqrt(N))\n",
         "\n",
         "    return (LI, LS)\n",
         "# array = pegue os dados\n",
@@ -510,7 +510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 7,
       "metadata": {
         "id": "Eynd-EnyNkuq"
       },
@@ -534,7 +534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 19,
       "metadata": {
         "id": "fB3QNl7iRRX2"
       },
@@ -573,7 +573,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 9,
       "metadata": {
         "id": "6bGem0S0zOb2"
       },
@@ -586,7 +586,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 10,
       "metadata": {
         "id": "QWq52qQp2u3A"
       },
@@ -642,7 +642,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 11,
       "metadata": {
         "id": "HusB0hXVAXHD"
       },
@@ -698,7 +698,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -785,7 +785,7 @@
               "Privada                                      566  "
             ]
           },
-          "execution_count": 34,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -812,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 13,
       "metadata": {
         "id": "VKRjH8ZxpPdv"
       },
@@ -837,7 +837,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -855,7 +855,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 15,
       "metadata": {
         "id": "eHLyqTxd0u6g"
       },
@@ -896,7 +896,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
