--- a/VPL/VPL4/sol.ipynb
+++ b/VPL/VPL4/sol.ipynb
@@ -812,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "VKRjH8ZxpPdv"
       },
@@ -823,7 +823,11 @@
         "    # return 1 ou 2 ou 3 ou 4 ou 5 ou 6\n",
         "    # Escreva sua resposta abaixo:\n",
         "    # YOUR CODE HERE\n",
-        "    return 3"
+        "    resposta = 4\n",
+        "\n",
+        "\n",
+        "\n",
+        "    return 4"
       ]
     },
     {
