--- a/VPL/VPL6/sol.ipynb
+++ b/VPL/VPL6/sol.ipynb
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 25,
       "metadata": {
         "id": "ZdIBa0AMeqPw"
       },
@@ -102,6 +102,7 @@
       "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
         "\n",
         "from numpy.testing import assert_almost_equal\n",
         "from numpy.testing import assert_equal\n",
@@ -182,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 26,
       "metadata": {
         "id": "jPgEPEDLE8ht"
       },
@@ -193,7 +194,7 @@
               "np.float64(0.23)"
             ]
           },
-          "execution_count": 68,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -221,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 27,
       "metadata": {
         "id": "IbrVxyvvGArT"
       },
@@ -264,7 +265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 28,
       "metadata": {
         "id": "GHfW-AHjEeJ0"
       },
@@ -316,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 29,
       "metadata": {
         "id": "Z4dMYnjxRu0p"
       },
@@ -333,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 30,
       "metadata": {
         "id": "nicZmoyld71h"
       },
@@ -344,7 +345,7 @@
               "np.float64(0.2388520680899867)"
             ]
           },
-          "execution_count": 88,
+          "execution_count": 30,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -406,7 +407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 31,
       "metadata": {
         "id": "eIfLBA7RaNp-"
       },
@@ -426,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 32,
       "metadata": {
         "id": "dpfiLwnl4uEe"
       },
@@ -442,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 33,
       "metadata": {
         "id": "Otsq8KgQ5gnw"
       },
@@ -470,7 +471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 69,
       "metadata": {
         "id": "txWt6B-o4cqP"
       },
@@ -490,11 +491,12 @@
         "\n",
         "    # Lembre que podemos utilizar mediana, média ou qualquer outra estatística agregada\n",
         "    # values[i] = sample[col].median()\n",
+        "    # values[i] = np.mean(sample)\n",
         "    values[i] = sample.mean()\n",
         "\n",
         "  # Gerando valores inferior e superior para um nível de confiança de 95%\n",
-        "  LI = np.percentile(values, 2.5)\n",
-        "  LS = np.percentile(values, 97.5)\n",
+        "  # LI = np.percentile(values, 2.5)\n",
+        "  # LS = np.percentile(values, 97.5)\n",
         "\n",
         "  values = pd.Series(values)\n",
         "\n",
@@ -507,11 +509,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 70,
       "metadata": {
         "id": "Iu6LqCYf7k2G"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "AssertionError",
+          "evalue": "\nItems are not equal:\n ACTUAL: 97.97\n DESIRED: np.float64(98.0)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[70]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m (LI, LS) = bootstrap_mean(df)\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# print(LI, LS)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43massert_equal\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m97.97\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mLI\u001b[49m\u001b[43m.\u001b[49m\u001b[43mround\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m assert_equal(\u001b[32m98.55\u001b[39m, LS.round(\u001b[32m2\u001b[39m))\n",
+            "\u001b[36mFile \u001b[39m\u001b[32mc:\\dev\\ufmg-2025-2\\dcc-212\\myEnv\\Lib\\site-packages\\numpy\\testing\\_private\\utils.py:462\u001b[39m, in \u001b[36massert_equal\u001b[39m\u001b[34m(actual, desired, err_msg, verbose, strict)\u001b[39m\n\u001b[32m    459\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    460\u001b[39m     \u001b[38;5;66;03m# Explicitly use __eq__ for comparison, gh-2552\u001b[39;00m\n\u001b[32m    461\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (desired == actual):\n\u001b[32m--> \u001b[39m\u001b[32m462\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(msg)\n\u001b[32m    464\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mDeprecationWarning\u001b[39;00m, \u001b[38;5;167;01mFutureWarning\u001b[39;00m) \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m    465\u001b[39m     \u001b[38;5;66;03m# this handles the case when the two types are not even comparable\u001b[39;00m\n\u001b[32m    466\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33melementwise == comparison\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m e.args[\u001b[32m0\u001b[39m]:\n",
+            "\u001b[31mAssertionError\u001b[39m: \nItems are not equal:\n ACTUAL: 97.97\n DESIRED: np.float64(98.0)"
+          ]
+        }
+      ],
       "source": [
         "(LI, LS) = bootstrap_mean(df)\n",
         "# print(LI, LS)\n",
